--- a/base03/src/index.css
+++ b/base03/src/index.css
@@ -1,25 +1,18 @@
 
 .header-img {
   width: 24px;
-  height: 24px;
+  margin-right: 7px;
   object-fit: cover;
 }
 
 .main-header {
-  width: Fixed (550px)px;
-  height: Fixed (55px)px;
-  gap: 0px;
-  opacity: 0px;
+  height: Fixed 55px;
   display: flex;
   color: white;
   align-items: center;
   justify-content: center;
-  font-size: 14.46;
-  font-family: 'Inter';
-  font-weight: '500';
-  word-wrap: 'break-word';
   background-color: #F55A5A;
-  padding: 20px 0 20px 0;
+  padding: 1rem 0 1rem 0;
 }
 
 .main-header:hover {
@@ -31,7 +24,9 @@
 }
 
 .main-header > span {
-  padding: 7px;
+  font-size: 0.9rem;
+  font-weight: 500;
+  font-family: 'Inter';
 }
 
 html, body {
