--- a/base03/src/index.css
+++ b/base03/src/index.css
@@ -1,7 +1,84 @@
+.entry-card {
+  height: 10rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 1rem 2.5rem 1rem 2.5rem;
+}
+
+.entry-card-img {
+  width: 125px;
+  height: 168px;
+  background: grey;
+}
+
+.entry-card-text {
+  height: 168px;
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 0 1rem 0 1rem;
+}
+
+.entry-card-text > * {
+  margin: 0;
+}
+
+.entry-location {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 15px;
+}
+
+.entry-location > img {
+  width: 7px;
+  padding-right: 5px;
+}
+
+.entry-location > span {
+  font-size: 0.8rem;
+  font-weight: 500;
+  font-family: 'Inter';
+  padding-right: 5px;
+}
+
+.entry-location > a {
+  color: #918E9B;
+  font-size: 0.7rem;
+  font-family: 'Inter';
+  font-weight: 400;
+  text-decoration: 'underline';
+}
+
+.entry-title {
+  color: #2B283A;
+  font-size: 1.7rem;
+  font-family: 'Inter';
+  font-weight: 700;
+  padding-bottom: 10px;
+}
+
+.entry-date {
+  color: #2B283A;
+  font-size: 0.7rem;
+  font-family: 'Inter';
+  font-weight: 700;
+  word-wrap: break-word;
+}
+
+.entry-description {
+  color: #2B283A;
+  font-size:  0.7rem;
+  font-family: 'Inter';
+  font-weight: 400;
+  word-wrap: break-word;
+  margin-bottom: 15px;
+}
 
 .header-img {
   width: 24px;
-  margin-right: 7px;
   object-fit: cover;
 }
 
