--- a/base03/src/index.css
+++ b/base03/src/index.css
@@ -4,12 +4,22 @@
   flex-direction: row;
   justify-content: space-between;
   padding: 1rem 2.5rem 1rem 2.5rem;
+  max-width: 500px;
 }
 
-.entry-card-img {
+.entry-card-img-container {
   width: 125px;
   height: 168px;
-  background: grey;
+  overflow: hidden;
+  border-radius: 5px;
+  flex-shrink: 0;
+}
+
+
+.entry-card-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .entry-card-text {
