Add Main component and integrate it into App; update styles for main form

--- a/base05/src/index.css
+++ b/base05/src/index.css
@@ -32,6 +32,43 @@
     color: #1A252B;
 }
 
+.main-div {
+    padding: 70px 30px 10px;
+}
+
+.main-form-add-ingredient {
+    display: flex;
+    justify-content: center;
+    gap: 12px;
+    height: 38px;
+}
+
+.main-form-add-ingredient > input {
+    padding: 9px 13px;
+    border: 1px solid #D1D5DB;
+    border-radius: 6px;
+    box-shadow: 0px 1px 2px 0px #0000000D;
+    flex-grow: 1;
+    min-width: 150px;
+    max-width: 400px;
+}
+
+.main-form-add-ingredient > button {
+    font-family: Inter, sans-serif;
+    border-radius: 6px;
+    border: none;
+    background-color: #141413;
+    color: #FAFAF8;
+    width: 150px;
+    font-size: 0.875rem;
+    font-weight: 500;
+}
+
+.main-form-add-ingredient > button::before {
+    content: "+";
+    margin-right: 5px;
+}
+
 
 * {
     box-sizing: border-box;
