Add recipe suggestion feature with toggle functionality and enhance button styles

--- a/base05/src/index.css
+++ b/base05/src/index.css
@@ -119,7 +119,17 @@
     font-weight: 500;
 }
 
+.main-get-recipe-container > button:hover {
+    background-color: #dd5a2b;
+}
 
+.main-get-recipe-container > button:active {
+    background-color: #E18C6D;
+}
+
+.main-get-recipe-container > button:disabled {
+    background-color: #c4bab6;
+}
 
 * {
     box-sizing: border-box;
