Add ClaudeRecipe and IngredientList components; refactor Main component to utilize them

--- a/base05/src/index.css
+++ b/base05/src/index.css
@@ -131,6 +131,14 @@
     background-color: #c4bab6;
 }
 
+button {
+    cursor: pointer;
+}
+
+button:disabled {
+    cursor: not-allowed;
+}
+
 * {
     box-sizing: border-box;
 }
