Refactor Main component to streamline ingredient addition and improve recipe loading; enhance MistralRecipe styling

--- a/base05/src/index.css
+++ b/base05/src/index.css
@@ -131,6 +131,17 @@
     background-color: #c4bab6;
 }
 
+.suggested-recipe-container {
+    color: #475467;
+    line-height: 28px;
+    font-size: 1.125rem;
+    font-weight: 400;
+}
+
+.suggested-recipe-container ul li, .suggested-recipe-container ol li {
+    margin-bottom: 8px;
+}
+
 button {
     cursor: pointer;
 }
