--- a/base09/src/index.css
+++ b/base09/src/index.css
@@ -11,6 +11,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: Karla, sans-serif;
 }
 
 div#root {
@@ -26,8 +27,21 @@ main {
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    padding: 20px;
+}
+
+.title {
+    font-size: 40px;
+    margin: 0;
+}
+
+.instructions {
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    margin-top: 0;
+    text-align: center;
 }
 
 button.die-button {
@@ -62,6 +76,8 @@ button.roll-button {
     font-weight: bold;
     cursor: pointer;
     height: 50px;
-    width: 92px;
+    min-width: 92px;
     margin-top: 25px;
+    white-space: nowrap;
+    padding: 6px 21px;
 }
