--- a/base09/src/index.css
+++ b/base09/src/index.css
@@ -81,3 +81,15 @@ button.roll-button {
     white-space: nowrap;
     padding: 6px 21px;
 }
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
