Add clsx for conditional class names, implement game over logic, and enhance styles in App component

--- a/base10/src/index.css
+++ b/base10/src/index.css
@@ -46,12 +46,26 @@ header p {
 }
 
 section.game-status{
-  width: 352px;
+  min-height: 59px;
+  width: 100%;
+  max-width: 352px;
   text-align: center;
-  padding: 6px 0;
   border-radius: 4px;
   font-weight: 500;
+  margin-block: 20px;
 }
+
+section.game-status.lost{
+  background-color: #BA2A2A;
+}
+
+
+section.game-status.won{
+  background-color: #10A95B;
+}
+
+
+
 
 section.game-status > * {
   font-family: "Hanken Grotesk", Arial, sans-serif;
@@ -59,7 +73,7 @@ section.game-status > * {
   color: #F9F4DA;
 }
 
-section.game-status h1 {
+section.game-status h1::after {
   font-size: 1.5rem;
 }
 
@@ -77,12 +91,7 @@ section.languages-container {
   padding: 36px;
 }
 
-section.languages-container > * {
-  font-family: "Hanken Grotesk", Arial, sans-serif;
-  font-size: 12px;
-  padding: 4.5px;
-  border-radius: 4px;
-}
+
 
 section.word-container {
   display: flex;
@@ -91,15 +100,6 @@ section.word-container {
   max-width: 352px;
 }
 
-section.word-container > span {
-  font-family: "Hanken Grotesk", Arial, sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 40px;
-  width: 40px;
-  border-bottom: 1px solid #F9F4DA;
-}
 
 section.keyboard-container {
   display: flex;
@@ -112,22 +112,6 @@ section.keyboard-container {
   margin-bottom: 36px;
 }
 
-section.keyboard-container > button {
-  font-family: "Hanken Grotesk", Arial, sans-serif;
-  font-size: 16px;
-  font-weight: 600;
-  padding: 9px;
-  border-radius: 4px;
-  border: 1px solid #D7D7D7;
-  height: 40px;
-  width: 40px;
-  cursor: pointer;
-}
-
-section.keyboard-container > button:hover {
-  opacity: 0.5;
-}
-
 button.new-game {
   background-color: #11B5E5;
   border: 1px solid #D7D7D7;
@@ -138,4 +122,61 @@ button.new-game {
   display: block;
   margin-inline: auto;
   cursor: pointer;
+}
+
+button.keyboard-button {
+  font-family: "Hanken Grotesk", Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  padding: 9px;
+  border-radius: 4px;
+  border: 1px solid #D7D7D7;
+  height: 40px;
+  width: 40px;
+  cursor: pointer;
+  background-color: #FCBA29;
+}
+
+button.keyboard-button.guessed {
+  background-color: #EC5D49;
+}
+
+button.keyboard-button.guessed.correct {
+  background-color: #10A95B;
+}
+
+span.word-letter {
+  font-family: "Hanken Grotesk", Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  width: 40px;
+  border-bottom: 1px solid #F9F4DA;
+  background-color: #323232;
+
+}
+
+
+span.language-letter {
+  font-family: "Hanken Grotesk", Arial, sans-serif;
+  font-size: 12px;
+  padding: 4.5px;
+  border-radius: 4px;
+  position: relative;
+}
+
+span.language-letter.die::before{
+  font-size: 0.85rem;
+  content: "💀"; /*<meta charset="UTF-8">*/
+  border-radius: 4px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
 }
