--- a/base10/src/index.css
+++ b/base10/src/index.css
@@ -49,6 +49,9 @@ section.game-status{
   min-height: 59px;
   width: 100%;
   max-width: 352px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   text-align: center;
   border-radius: 4px;
   font-weight: 500;
@@ -64,6 +67,12 @@ section.game-status.won{
   background-color: #10A95B;
 }
 
+section.game-status.wrong{
+  background-color: #7A5EA7;
+  border: 1px dashed #323232;
+  font-style: italic;
+  font-weight: 400;
+}
 
 
 
@@ -141,9 +150,15 @@ button.keyboard-button.guessed {
   background-color: #EC5D49;
 }
 
-button.keyboard-button.guessed.correct {
+button.keyboard-button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+  button.keyboard-button.guessed.correct {
   background-color: #10A95B;
 }
+
+
 
 span.word-letter {
   font-family: "Hanken Grotesk", Arial, sans-serif;
@@ -179,4 +194,16 @@ span.language-letter.die::before{
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.7);
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
